--- a/views/layouts/createHackathon.html
+++ b/views/layouts/createHackathon.html
@@ -360,14 +360,14 @@
                                     <div class="input-group-append">
                                     </div>
                                 </div>
-                                <div class="input-group mb-3" id="hackLocation">
+                                <div class="input-group mb-3">
                                     <input type="text" class="form-control" placeholder="Location"
                                         aria-label="Recipient's username" aria-describedby="basic-addon2"
                                         id="hackLocation">
                                     <div class="input-group-append">
                                     </div>
                                 </div>
-                                <div class="input-group mb-3" id="hackLocation">
+                                <div class="input-group mb-3" >
                                     <input type="text" class="form-control" placeholder="Image URL"
                                         aria-label="Recipient's username" aria-describedby="basic-addon2"
                                         id="imageInput">
