--- a/views/layouts/createHackathon.html
+++ b/views/layouts/createHackathon.html
@@ -117,7 +117,8 @@
                 _refCreateHackathon.child("rules").set(hackRules);
                 _refCreateHackathon.child("criteria").set(criteria);
                 _refCreateHackathon.child("judges").set(judges);
-                _refCreateHackathon.child("Hackathon Location").set(hackLocation);
+                _refCreateHackathon.child("Hackathon Location").set(hackLocation)
+                _refCreateHackathon.child("Attendee Count").set("0")
 
                 console.log(code);
                 console.log(hackStart); 
@@ -137,6 +138,8 @@
                 _refCreateHackathon2.child("criteria").set(criteria);
                 _refCreateHackathon2.child("judges").set(judges);
                 _refCreateHackathon2.child("Hackathon Location").set(hackLocation);
+                _refCreateHackathon2.child("Attendee Count").set("0")
+
 
 
 
