--- a/views/layouts/joinHackathon.html
+++ b/views/layouts/joinHackathon.html
@@ -227,7 +227,7 @@
                        
 
                         <center style="margin-top: 50px;">
-                            <button class="btn btn-primary">Join Hackathon</button>
+                            <button class="btn btn-primary" onclick="joinHackathon()">Join Hackathon</button>
                         </center>
 
                         <style>
