--- a/views/layouts/joinHackathon.html
+++ b/views/layouts/joinHackathon.html
@@ -104,6 +104,8 @@
                 var userEmail = localStorage.getItem("normalEmail");
                 var userName = localStorage.getItem("name")
                 var userId = Math.floor(100000000 + Math.random() * 900000000);
+                console.log(joinCode);
+                console.log(userId)
 
 
                 _refHackathonAttendees = firebase.database().ref().child("Hackathons").child(joinCode).child("Attendees").child(userId);
