--- a/views/layouts/myHackathonsContent.html
+++ b/views/layouts/myHackathonsContent.html
@@ -263,9 +263,10 @@
                             <h2 class="dashhead-title" id="welcomeName">Loading...</h2>
                         </div>
 
-                        <button type="button" class="btn btn-primary create" style="margin-left: 500px;" onclick="navigateToCreate()">Create Hackathon</button>
-                        <style >
-                            .create:hover{
+                        <button type="button" class="btn btn-primary create" style="margin-left: 500px;"
+                            onclick="navigateToCreate()">Create Hackathon</button>
+                        <style>
+                            .create:hover {
                                 cursor: pointer;
 
                             }
@@ -281,14 +282,30 @@
 
 
                     </div>
+
+
+
+
                     
-
-
+                    
 
                     <div class="hr-divider mt-5 mb-3">
-                        <h3 class="hr-divider-content hr-divider-heading">My Hackathons</h3>
+                        <h3 class="hr-divider-content hr-divider-heading">Upcomming Hackathons</h3>
                     </div>
-                    
+
+                    <div class="upcommingHackathons">
+
+                    </div>
+
+                    <div class="hr-divider mt-5 mb-3">
+                        <h3 class="hr-divider-content hr-divider-heading">Hosted Hackathons</h3>
+                    </div>
+
+                    <div class="hostedHackathons">
+
+                    </div>
+
+
 
                     <script src="assets/js/jquery.min.js"></script>
                     <script src="assets/js/tether.min.js"></script>
