--- a/views/layouts/joinHackathon.html
+++ b/views/layouts/joinHackathon.html
@@ -102,7 +102,8 @@
             function joinHackathon() {
                 var joinCode = document.getElementById("joinCode").value;
                 var userEmail = localStorage.getItem("normalEmail");
-                var userName = localStorage.getItem("name")
+                var userName = localStorage.getItem("name");
+                var formattedEmail = localStorage.getItem("email")
                 var userId = Math.floor(100000000 + Math.random() * 900000000);
                 console.log(joinCode);
                 console.log(userId)
@@ -112,6 +113,11 @@
                 _refHackathonAttendees.child("Email").set(userEmail);
                 _refHackathonAttendees.child("Name").set(userName);
                 _refHackathonAttendees.child("Status").set("Absent");
+                window.location("hackathonsContent.html");
+
+                _refHackathonAttendees2 = firebase.database().ref().child("UserData").child(formattedEmail).child("Hackathons").child(joinCode);
+                _refHackathonAttendees2.child("Role").set("Attendee")
+                
             }
 
 
@@ -122,7 +128,6 @@
 
 
         </script>
-
 
 
         <div class="container">
