--- a/views/layouts/myHackathonsContent.html
+++ b/views/layouts/myHackathonsContent.html
@@ -293,7 +293,7 @@
                         <h3 class="hr-divider-content hr-divider-heading">Upcomming Hackathons</h3>
                     </div>
 
-                    <div class="upcommingHackathons">
+                    <div class="upcommingHackathons" id="upcommingHackathons">
 
                     </div>
 
