--- a/views/layouts/myHackathonsContent.html
+++ b/views/layouts/myHackathonsContent.html
@@ -146,7 +146,7 @@
 
                         if (output2 !== "") {
                             if(hackathonRole == "Hoster") {
-                                $(output).appendTo("#Hosted Hackathons")
+                                $(output).appendTo("#hostedHackathons")
                             } else {
                                 $(output).appendTo("#upcommingHackathons");
 
@@ -288,6 +288,7 @@
                     <div class="hr-divider mt-5 mb-3">
                         <h3 class="hr-divider-content hr-divider-heading">Hosted Hackathons</h3>
                     </div>
+                    <div class="row" id="hostedHackathons"></div>
 
                     <div class="hostedHackathons">
 
