--- a/views/layouts/myHackathonsContent.html
+++ b/views/layouts/myHackathonsContent.html
@@ -144,7 +144,7 @@
 
                         
 
-                        if (output2 !== "") {
+                        if (output !== "") {
                             if(hackathonRole == "Hoster") {
                                 $(output).appendTo("#hostedHackathons")
                             } else {
@@ -290,9 +290,7 @@
                     </div>
                     <div class="row" id="hostedHackathons"></div>
 
-                    <div class="hostedHackathons">
-
-                    </div>
+                    
 
 
 
