--- a/views/layouts/myHackathonsContent.html
+++ b/views/layouts/myHackathonsContent.html
@@ -146,6 +146,7 @@
                         
 
                         if (output !== "") {
+                            console.log(hackathonLocation)
                             if(hackathonRole == "Hoster") {
                                 $(output).appendTo("#hostedHackathons")
                             } else {
