btn btn-primary

--- a/views/layouts/myHackathonsContent.html
+++ b/views/layouts/myHackathonsContent.html
@@ -135,6 +135,7 @@
                                     ${hackathonName}
                                 </h4>
                                 <p class="card-text">${hackathonRole}</p>
+                                <buttton class = "btn btn-primary">Enter Room</button>
                                 </div>
                             </div>
                         </div>
