style color black

--- a/views/layouts/myHackathonsContent.html
+++ b/views/layouts/myHackathonsContent.html
@@ -131,7 +131,7 @@
                             <div class="card h-100">
                                 <img class="card-img-top" src="${bgImage}" alt="">
                                 <div class="card-body">
-                                <h4 class="card-title">
+                                <h4 class="card-title" style = "color: black">
                                     ${hackathonName}
                                 </h4>
                                 <p class="card-text">${hackathonRole}</p>
