--- a/views/login.html
+++ b/views/login.html
@@ -26,8 +26,9 @@
 					</span>
 
 					<a href="#" class="btn-face m-b-20" style="text-decoration: none;">
-						<img src="../Assets1/facebook-logo-966BBFBC34-seeklogo.com.png" style="width: 50px;  padding-right: 20px;   font-family: 'Roboto', sans-serif;">
-						<p style="font-family: 'Roboto', sans-serif; color: white;">QR Login</p>
+						<img src="../Assets1/facebook-logo-966BBFBC34-seeklogo.com.png" style="width: 50px;  padding-right: 20px;   font-family: 'Roboto', sans-serif;}
+                        ">
+						<p style="font-family: 'Roboto', sans-serif; color: white;">Facebook</p>
 					</a>
 
 
